feat: dump host of host file

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,7 +57,7 @@
             "command": [
                 "source ${workspaceFolder}/.vscode/.zshrc;",
                 "echo '================ ADDING THIS LINE IN FILE ========';",
-                "echo ${RHOST}  ${DOMAIN};",
+                "dump_hosts;",
                 "echo '================================================';",
                 "sudo",
                 "vim",
