feat: run selected text in file

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -129,6 +129,19 @@
                 "-- ${input:nmap-args}"
             ],
             "problemMatcher": []
+        },
+        {
+            "label": "run command with selection",
+            "type": "shell",
+            "detail": "Run command with selection in the terminal",
+            "command": [
+                "source ${workspaceFolder}/.vscode/.zshrc; ",
+                "echo 'Running command with selection:';",
+                "echo '${selectedText}';",
+                "echo 'Press any key to continue or Ctrl-C to cancal';",
+                "read;",
+                "${selectedText}"
+            ],
         }
     ],
     "inputs": [
