Enhances shell scripts and VS Code tasks for usability
Adds `read` prompts to improve user interaction in shell scripts. Updates default values and environment handling for better flexibility. Enhances `dump_users` output with additional details. Introduces a `differ` function for file comparison. Refines VS Code settings and tasks for improved task execution and user guidance. Removes unused or redundant configurations and commands. Improves installer script by refining requirement checks and user prompts.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "terminal.integrated.profiles.linux": {
         "zsh-shell": {
             "env": {
-                "PROJECT_FOLDER": "${workspaceFolder}"
+                "PROJECT_FOLDER": "${workspaceFolder}",
+                "SHOW_CURRENT_STATUS": "True"
             },
             "path": "zsh"
         },
@@ -42,7 +43,8 @@
     "terminal.integrated.profiles.osx": {
         "zsh-shell": {
             "env": {
-                "PROJECT_FOLDER": "${workspaceFolder}"
+                "PROJECT_FOLDER": "${workspaceFolder}",
+                "SHOW_CURRENT_STATUS": "True"
             },
             "path": "zsh"
         },
